--- a/css/header.scss
+++ b/css/header.scss
@@ -5,33 +5,25 @@
     }
 
     .searchbar {
-        margin: auto;
         margin: 22px;
     }
 
     .header {
         flex-wrap: wrap;
-        align-items: center;
-        align-content: center;
     }
 
 }
-
-//#region Top
 
 header three-column-grid {
     gap: 0;
 }
 
-.header-buttons-that-are-being-annoying {
-    margin-bottom: 12px;
-    margin-top: 12px;
-    a { margin-left: 10px; }
-}
-
 header {
     width: 100vw;
+    min-width: 700px;
 }
+
+//#region Top
 
 .fa-twitter {
     width: 10px; //Twitter is for some reason larger than the other icons
@@ -64,6 +56,11 @@ header {
 
 //#endregion
 //#region Middle
+
+.header {
+    align-items: center;
+    align-content: center;
+}
 
 .logo {
     align-self: center;
@@ -108,18 +105,66 @@ header {
     
 }
 
+.header-buttons {
+    align-self: center;
+    a { margin-left: 18px; align-self: center; }
+}
+
 .account {
     white-space: nowrap;
+    margin-right: 32px;
     span {
         margin-left: 6px;
     }
 }
 
-.cart::after {
-    margin-left: 6px;
-    font-size: 16px;
-    font-family: 'Roboto', sans-serif;
-    content: "€0.00";
+.cart {
+    width: fit-content;
+    text-align: center;
+    margin-top: -2px;
+    margin-right: 40px;
+    
+    span {
+        margin-left: 8px;
+    }
+
+}
+
+[count] {
+
+    position: relative;
+
+    &::after {
+        content: attr(count);
+        display: inline;
+        position: absolute;
+        top: -12px;
+        right: -12px;
+        background-color: var(--theme-color);
+        font-family: roboto;
+        font-size: 12px;
+        color: white;
+        padding: 4px;
+        border-radius: 100%;
+    }
+    
+}
+
+[cart-total] {
+
+    position: relative;
+    
+    &::after {
+        content: attr(cart-total);
+        display: block;
+        position: absolute;
+        left: 0;
+    }
+
+}
+
+.small-viewport-header-button {
+    margin-top: 0px;
 }
 
 //#endregion
